# youtubeDownloader

./: .gitignore  LICENSE  Makefile  README.md  playlist_urls.txt  pyproject.toml
src/youtube_downloader/: main.py
