[tool.poetry]
name = "youtubedownloader"
version = "0.1.0"
authors = ["p16m13"]
description = "The application allows download videos and playlists from the Youtube"
packages = [
    { include = "youtube_downloader", from = "src" }
]

[tool.poetry.dependencies]
python = "3.9"
pytube = "^12.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
